--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela
+    </title>
     <style>
         body {
             height: 98vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
+            background: black url(imagens/wallpaper002.jpg) center center/cover no-repeat fixed;
         }
 
         main {
@@ -33,6 +30,27 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, perspiciatis hic! Molestiae illum, minima perspiciatis fuga recusandae soluta repellat magnam commodi tempore voluptate sint dolorem. Labore quo vitae consectetur quis?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nulla, totam aspernatur error nostrum ratione quas quaerat inventore in ea ex doloremque vitae ut id sequi tempore! Et, similique voluptatibus?
         </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum totam possimus est quam. Tenetur error consequatur consequuntur, dolor, ullam fuga nam explicabo enim itaque sit harum magni modi hic quibusdam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, perspiciatis hic! Molestiae illum, minima perspiciatis fuga recusandae soluta repellat magnam commodi tempore voluptate sint dolorem. Labore quo vitae consectetur quis?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nulla, totam aspernatur error nostrum ratione quas quaerat inventore in ea ex doloremque vitae ut id sequi tempore! Et, similique voluptatibus?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum totam possimus est quam. Tenetur error consequatur consequuntur, dolor, ullam fuga nam explicabo enim itaque sit harum magni modi hic quibusdam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, perspiciatis hic! Molestiae illum, minima perspiciatis fuga recusandae soluta repellat magnam commodi tempore voluptate sint dolorem. Labore quo vitae consectetur quis?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nulla, totam aspernatur error nostrum ratione quas quaerat inventore in ea ex doloremque vitae ut id sequi tempore! Et, similique voluptatibus?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum totam possimus est quam. Tenetur error consequatur consequuntur, dolor, ullam fuga nam explicabo enim itaque sit harum magni modi hic quibusdam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, perspiciatis hic! Molestiae illum, minima perspiciatis fuga recusandae soluta repellat magnam commodi tempore voluptate sint dolorem. Labore quo vitae consectetur quis?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nulla, totam aspernatur error nostrum ratione quas quaerat inventore in ea ex doloremque vitae ut id sequi tempore! Et, similique voluptatibus?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum totam possimus est quam. Tenetur error consequatur consequuntur, dolor, ullam fuga nam explicabo enim itaque sit harum magni modi hic quibusdam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, perspiciatis hic! Molestiae illum, minima perspiciatis fuga recusandae soluta repellat magnam commodi tempore voluptate sint dolorem. Labore quo vitae consectetur quis?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nulla, totam aspernatur error nostrum ratione quas quaerat inventore in ea ex doloremque vitae ut id sequi tempore! Et, similique voluptatibus?
+        </p>
+
     </main>
 </body>
 </html>
